welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: type mismatch;
 found   : Unit
 required: Int
	compteur = compteur + 1
                 ^countTeen:3: error: type mismatch;
 found   : Unit
 required: Int
if (ado(a) == true) {
^