welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
var compteur = 0
if (ado(a) == true) {
	compteur = compteur + 1
}
}

def ado(x:Int) {	
	(x >= 13 && x <= 19)
}
